--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@adonisjs/core": "^5.1.0",
     "@adonisjs/lucid": "^15.0.3",
     "@adonisjs/repl": "^3.0.0",
+    "@types/socket.io": "^3.0.2",
     "luxon": "^2.0.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.1.3",
     "source-map-support": "^0.5.19",
     "sqlite3": "^5.0.2"
   }
