--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/socket.io": "^3.0.2",
     "colyseus": "^0.14.23",
     "luxon": "^2.0.2",
+    "phc-argon2": "^1.1.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.1.3",
