--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -18,19 +18,9 @@
     "./start/kernel",
     {
       "file": "./start/events",
-      "environment": [
-        "repl",
-        "web"
-      ]
+      "environment": ["repl", "web"]
     }
   ],
-  "providers": [
-    "./providers/AppProvider",
-    "@adonisjs/core",
-    "@adonisjs/lucid",
-    "@adonisjs/auth"
-  ],
-  "aceProviders": [
-    "@adonisjs/repl"
-  ]
+  "providers": ["./providers/AppProvider", "@adonisjs/core", "@adonisjs/lucid", "@adonisjs/auth"],
+  "aceProviders": ["@adonisjs/repl"]
 }
